[package]
name = "rs-geoip-protector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
maxminddb = "0.17"
tokio = { version = "1.33.0", features = ["full"] }
